# goit-rdb-hw-07

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
init-scripts/: 01-init.sql  dump.sql  goit-rdb-hw-03_dump.sql
